# androyara

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yara_jni.c
app/src/main/java/com/example/yaraxsample/: MainActivity.kt  YaraX.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
